create auth base

--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.1.0",
+    "@hookform/resolvers": "^3.4.2",
     "@iconify/icons-eva": "^1.2.6",
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
+    "@tanstack/react-query": "^5.37.1",
     "apexcharts": "^3.43.0",
+    "axios": "^1.7.2",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "history": "^5.3.0",
