--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "formik": "^2.4.5",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
+    "notistack": "^3.0.1",
+    "notistack5": "^1.0.1",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
