--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
     "apexcharts": "^3.43.0",
+    "axios": "^1.7.2",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "history": "^5.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
     "notistack5": "^1.0.1",
