--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.7.2",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
+    "framer-motion": "^11.2.10",
     "history": "^5.3.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
