--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@mui/material": "^5.14.12",
     "apexcharts": "^3.43.0",
     "axios": "^1.7.2",
+    "axios-cache-adapter": "^2.7.3",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.2.10",
