--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
+    "@react-oauth/google": "^0.12.1",
     "apexcharts": "^3.43.0",
     "axios": "^1.7.2",
+    "axios-cache-adapter": "^2.7.3",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.2.10",
@@ -44,6 +46,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-google-autocomplete": "^2.7.3",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
