--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@mui/material": "^5.14.12",
     "@react-oauth/google": "^0.12.1",
     "apexcharts": "^3.43.0",
+    "autosuggest-highlight": "^3.3.4",
     "axios": "^1.7.2",
     "axios-cache-adapter": "^2.7.3",
     "date-fns": "^2.30.0",
