--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
+    "@mui/styles": "^5.15.21",
     "@react-oauth/google": "^0.12.1",
     "apexcharts": "^3.43.0",
     "autosuggest-highlight": "^3.3.4",
@@ -41,6 +42,7 @@
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
     "notistack5": "^1.0.1",
+    "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -50,7 +52,9 @@
     "react-google-autocomplete": "^2.7.3",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
+    "react-intersection-observer": "^9.10.3",
     "react-router-dom": "^6.16.0",
+    "react-scroll": "^1.9.0",
     "simplebar-react": "^3.2.4",
     "yup": "^1.4.0"
   },
