--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "formik": "^2.4.5",
     "framer-motion": "^11.2.10",
     "history": "^5.3.0",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
